# yahs

./: .gitignore  404.html  Cargo.toml  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
.github/: FUNDING.yml
.github/workflows/: build.yml  cargo.yml  docs.yml  extras.yml  rust.yml
assets/: default.toml  gases.ron  materials.ron  properties.ron
assets/configs/: properties.ron  setup.ron
assets/shaders/: crt.wgsl  readme.md
config/: controller.toml  default.toml  sim_config.toml  simulation.toml  vehicle.toml
crates/buoy-core/: Cargo.toml  README.md
crates/buoy-core/src/: atmosphere.rs  constants.rs  core.rs  forces.rs  format.rs  geometry.rs  grid.rs  ideal_gas.rs  lib.rs  material_properties.rs  scene.rs  space.rs  time.rs
crates/buoy-ui/: Cargo.toml  README.md
crates/buoy-ui/src/: big_space_demo.rs  camera.rs  controls.rs  debug.rs  lib.rs  lighting.rs  main.rs
crates/yahs/: Cargo.toml  README.md  index.html
crates/yahs-cli/: Cargo.toml  README.md  index.html
crates/yahs-cli/src/: colors.rs  controls.rs  lib.rs  main.rs  ui.rs
crates/yahs-ui/: Cargo.toml  README.md  index.html
crates/yahs-ui/src/: camera.rs  colors.rs  console.rs  controls.rs  dev_tools.rs  gizmos.rs  hud.rs  lib.rs  main.rs  plot.rs  scene.rs
crates/yahs-ui/src/dev_tools/: console.rs  fps.rs  mod.rs
crates/yahs/src/: atmosphere.rs  balloon.rs  constants.rs  core.rs  debug.rs  dynamics.rs  geometry.rs  heat.rs  ideal_gas.rs  lib.rs  mod.rs  properties.rs  shape.rs  space.rs  spawn.rs  thermodynamics.rs  time.rs  trajectory.rs  units.rs
crates/yahs/src/dynamics/: forces.rs  mod.rs  space.rs  time.rs
crates/yahs/src/forces/: aero.rs  body.rs  buoyancy.rs  mod.rs  net.rs  weight.rs
crates/yahs/src/gas/: atmosphere.rs  ideal_gas.rs  mod.rs
crates/yahs/src/geometry/: mod.rs  primitives.rs  raycast.rs  volume.rs
crates/yahs/src/objects/: balloon.rs  mod.rs  tether.rs
crates/yahs/src/vehicle/: balloon.rs  mod.rs  payload.rs  tether.rs
docs/: .gitignore  SUMMARY.md  devlog.md  drag.md  index.md  notes.md  pyproject.toml
docs/animations/: main.py  manim.cfg
docs/animations/media/videos/main/720p30/partial_movie_files/ControlVolume/: partial_movie_file_list.txt
docs/animations/media/videos/main/720p30/partial_movie_files/ForceBalance/: partial_movie_file_list.txt
docs/reference/: newtonian_aero.md
src/: assets.rs  cli.rs  config.rs  dev_tools.rs  lib.rs  main.rs  scene.rs
src/app3d/: camera.rs  controls.rs  dev_tools.rs  gizmos.rs  mod.rs  monitors.rs  scene.rs
src/app3d/effects/: crt.rs  mod.rs
src/app3d/scene/: camera.rs  mod.rs  vectors.rs
src/app3d/ui/: core.rs  dev_tools.rs  mod.rs  monitors.rs
src/cli/: Cargo.toml  mod.rs  sim.rs
src/cli/src/: main.rs
src/gui/: app.rs  mod.rs  monitors.rs  plot_demo.rs  screens.rs  shell.rs  views.rs
src/gui/demo/: context_menu.rs  demo_app_windows.rs  drag_and_drop.rs  highlighting.rs  misc_demo_window.rs  mod.rs  paint_bezier.rs  painting.rs  panels.rs  plot_demo.rs  scrolling.rs  sliders.rs  table_demo.rs  text_edit.rs  text_layout.rs  widget_gallery.rs  window_options.rs
src/simulator/: Cargo.toml  aero.rs  atmosphere.rs  balloon.rs  bus.rs  config.rs  constants.rs  core.rs  dynamics.rs  force.rs  forces.rs  gas.rs  geometry.rs  heat.rs  ideal_gas.rs  io.rs  materials.rs  mechanics.rs  mod.rs  payload.rs  physics.rs  properties.rs  save_for_later.rs  schedule.rs  simulate.rs  time.rs  tools.rs  units.rs
src/simulator/forces/: aero.rs  body.rs  mod.rs  scratch.rs
src/simulator/src/: atmosphere.rs  ideal_gas.rs  lib.rs
src/simulator/src/forces/: aero.rs
src/simulator/thermodynamics/: ideal_gas.rs  mod.rs
src/ui/: Cargo.toml  balloon_designer.rs  designer.rs  dev_tools.rs  mod.rs  monitors.rs  shell.rs  splash.rs  vectors.rs  views.rs
src/ui/src/: camera.rs  controls.rs  main.rs
