[workspace]
resolver = "2" # Important for Bevy
members = [
    "crates/yahs",
    "crates/yahs-cli",
    "crates/yahs-ui"
]

default-members = [
    "crates/yahs-ui",
    "crates/yahs-cli"
]

[workspace.package]
version = "0.4.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
readme = "README.md"
edition = "2021"
license = "MIT or Apache-2.0"
license-file = "LICENSE-APACHE"

[workspace.dependencies]
# Shared dependencies with fixed versions
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_state",
    "bevy_render", # needed for working with meshes, even without rendering
    "multi_threaded",
] }
avian3d = "0.2.1"
tracing = "0.1"
bevy_console = "0.13.1"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile for our code.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = false

# The default profile is optimized for Wasm builds because that's what [Trunk
# reads](https://github.com/trunk-rs/trunk/issues/605). Optimize for size in the
# wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit. Slows compile times, marginal
# improvements.
# codegen-units = 1

# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime
# performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file
# size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
