[package]
name = "yahs-cli"
version = "0.1.0"
description = "CLI for the YAHS simulator"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "yahs-cli"
path = "src/main.rs"

[dependencies]
yahs = { path = "../yahs" }
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_state",
] }
tracing = { workspace = true }
clap = "4.5.27"
bevy_console = { workspace = true }

[features]
default = []
dev = [
    "bevy/dynamic_linking",
]
