[package]
name = "yahs-cli"
version = "0.2.0"
description = "CLI for the YAHS simulator"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "yahs-cli"
path = "src/main.rs"

[dependencies]
yahs = { path = "../yahs" }
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_state",
] }
clap = "4.5.27"
bevy_console = "0.13.1"

[features]
default = []
dev = [
    "bevy/dynamic_linking",
]
