[package]
name = "yahs-ui"
version = "0.4.0"
description = "UI for the YAHS simulator"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
default-run = "yahs-ui"

[[bin]]
name = "yahs-ui"
path = "src/main.rs"

[dependencies]
yahs = { path = "../yahs" }
yahs-cli = { path = "../yahs-cli" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_gizmos",
    "default_font",
    "png",
    "tonemapping_luts",
    "wayland",
] }
avian3d = { workspace = true }
bevy-inspector-egui = { version = "0.28", optional = true, features = [
    "highlight_changes",
] }
bevy_console = { workspace = true }

[features]
default = ["dev"]
dev = [
    "avian3d/debug-plugin",
    "bevy/bevy_dev_tools",
    "yahs/dev",
]
inspect = ["bevy-inspector-egui"]
