[package]
name = "yahs-ui"
version = "0.2.0"
description = "UI for the YAHS simulator"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
default-run = "yahs-ui"

[[bin]]
name = "yahs-ui"
path = "src/main.rs"

[dependencies]
yahs = { path = "../yahs" }
yahs-cli = { path = "../yahs-cli", optional = true }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "default_font",
    "png",
    "tonemapping_luts",
    "wayland",
] }
avian3d = { workspace = true }
bevy_egui = "0.32.0"
egui_plot = "0.30.0"
bevy_console = { workspace = true, optional = true }
bevy-inspector-egui = { version = "0.29.1", optional = true, features = [
    "highlight_changes",
] }

[features]
default = ["dev"]
dev = [
    "avian3d/debug-plugin",
    "bevy/bevy_dev_tools",
    "yahs/dev",
]
console = [ "yahs-cli", "bevy_console" ]
inspect = ["bevy-inspector-egui"]
