[package]
name = "yahs-ui"
version = "0.2.0"
description = "UI for the YAHS simulator"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
default-run = "yahs-ui"

[[bin]]
name = "yahs-ui"
path = "src/main.rs"

[dependencies]
yahs = { path = "../yahs" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "default_font",
    "png",
    "tonemapping_luts",
    "wayland",
] }
avian3d = { workspace = true }
big_space = { workspace = true, features = [ "camera" ] }
bevy-inspector-egui = { version = "0.29.1", optional = true, features = [
    "highlight_changes",
] }

[features]
default = ["dev"]
dev = [
    "avian3d/debug-plugin",
    "bevy/bevy_dev_tools",
    "yahs/dev",
    "big_space/debug",
]
inspect = [ "bevy-inspector-egui" ]
