[package]
name = "yahs"
version = "0.4.0"
description = "High Altitude Balloon simulation plugin for Bevy"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bevy = { workspace = true }
bevy_rand = { version = "0.9", features = ["wyrand"] }
avian3d = { workspace = true }
rand_core = "0.6.4"

[features]
default = [
    "dev",
]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
]
