[package]
name = "yahs"
version = "0.6.0"
description = "High Altitude Balloon simulation plugin for Bevy"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
big_space = { workspace = true }

[features]
default = [
    "dev",
]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
    "avian3d/debug-plugin",
    "big_space/debug",
]
